Unit_6_Microcontroller_Architectures/lesson 4/lab1_Lesson4_Unit6/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:56:39 **** Build of configuration Debug for project EXTI ****
make -j8 all 
arm-none-eabi-gcc -mcpu=cortex-m3 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'gpio_init':
../Src/main.c:68:9: error: 'GPIOA_CRL' undeclared (first use in this function); did you mean 'GPIO_CRL'?
   68 |         GPIOA_CRL |= (1<<2);
      |         ^~~~~~~~~
      |         GPIO_CRL
../Src/main.c:68:9: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c: At top level:
../Src/main.c:99:6: warning: return type of 'main' is not 'int' [-Wmain]
   99 | void main(void)
      |      ^~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
20:57:36 **** Incremental Build of configuration Debug for project EXTI ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:100:6: warning: return type of 'main' is not 'int' [-Wmain]
  100 | void main(void)
      |      ^~~~
arm-none-eabi-gcc -o "EXTI.elf" @"objects.list"   -mcpu=cortex-m3 -T"E:\Courses_Trainings\Embedded_Diploma\Assingments\Unit_6_Microcontroller_Architectures\lesson 4\lab1_Lesson4_Unit6\EXTI\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXTI.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXTI.elf
 
arm-none-eabi-size   EXTI.elf 
arm-none-eabi-objdump -h -S  EXTI.elf  > "EXTI.list"
   text	   data	    bss	    dec	    hex	filename
    808	      8	   1568	   2384	    950	EXTI.elf
Finished building: default.size.stdout
 
Finished building: EXTI.list
 
